--- a/_includes/links.html
+++ b/_includes/links.html
@@ -15,6 +15,6 @@
     </li>
   {% endif %}
   <li>
-    <a class="feed" href="{{ site.url }}{{site.baseurl}}/feed.xml" title="Atom/RSS feed">Feed</a>
+    <a class="feed" href="{{ site.url }}{{site.baseurl}}/tags" title="Atom/RSS feed">Tags</a>
   </li>
 </ul>
